# mdtable_to_csv

./: .gitignore  README.md  __init__.py  pyproject.toml
res/: example_file.md  test_file.md  test_file_3.md
src/: __init__.py  extract_table.py
test/: test_extract_table.py  test_extract_table_from_file.py
test/test_res/: test_file.md  test_file_10.md  test_file_11.md  test_file_12.md  test_file_13.md  test_file_14.md  test_file_2.md  test_file_3.md  test_file_4.md  test_file_5.md  test_file_6.md  test_file_7.md  test_file_8.md  test_file_9.md
