[project]
name = "mdtable_to_csv"
version = "0.0.1"
authors = [
  { name="Shashank S", email="procodere@gmail.com" },
]
description = "Extract tables from markdown files and converts them to CSV format"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "rich",
  "typer==0.12.5"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: OS Independent",
]


[project.optional-dependencies]
test = [
  "pytest==8.3.2"
]

[project.urls]
Homepage = "https://github.com/im-shashanks/mdtable_to_csv"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# [project.scripts]
# mttc = "app:cli_app"